--- a/.pylintrc
+++ b/.pylintrc
@@ -355,7 +355,7 @@ single-line-if-stmt=no
 
 # List of modules that can be imported at any level, not just the top level
 # one.
-allow-any-import-level=
+allow-any-import-level=canvasapi.exceptions.CanvasException,bs4.BeautifulSoup,PyPDF2.PdfReader,canvasapi.Canvas
 
 # Allow explicit reexports by alias from a package __init__.
 allow-reexport-from-package=no
@@ -458,7 +458,7 @@ notes-rgx=
 [REFACTORING]
 
 # Maximum number of nested blocks for function / method body
-max-nested-blocks=5
+max-nested-blocks=6
 
 # Complete name of functions that never returns. When checking for
 # inconsistent-return-statements if a never returning function is called then
