--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 langchain
 langchain-community
+unstructured[docx,pptx]
 canvasapi
 beautifulsoup4
 lxml
@@ -15,4 +16,6 @@ pytz
 
 # installed from local development space
 # TODO: replace with PyPI package or GitHub release URL
--e git+https://lsloan@github.com/umich-its-ai/langchain_youtube.git@83fe3e96ed33ea140c99c087f585ca8c16dc73f1#egg=LangChainYouTube
+#-e git+https://lsloan@github.com/umich-its-ai/langchain_youtube.git@83fe3e96ed33ea140c99c087f585ca8c16dc73f1#egg=LangChainYouTube
+-e ../langchain_youtube
+
