--- a/.env.example
+++ b/.env.example
@@ -24,10 +24,9 @@ export CANVAS_COURSE_URL_TEMPLATE='https://umich.instructure.com/courses/{course
 
 # CANVAS_USER_ID_OVERRIDE_DEV_ONLY optional for testing.
 # *** DO NOT USE IN PRODUCTION ***
-# If given, the user ID will
-# be used instead of the user ID from the Canvas API response. This is useful
-# for testing the Canvas API without needing to get a Canvas token for the
-# specific user or hard-coding a user ID.
+# If given, the user ID will be used instead of the user ID from the Canvas API
+# response. This is useful for testing the Canvas API without needing to get a
+# Canvas token for the specific user or hard-coding a user ID.
 #export CANVAS_USER_ID_OVERRIDE_DEV_ONLY=''
 
 # TEST_CANVAS_* are only used by "canvas-test.py".  These values are
