#12 - Added note about API key access requirements

--- a/.env.example
+++ b/.env.example
@@ -31,6 +31,16 @@ export CANVAS_COURSE_URL_TEMPLATE='https://umich.instructure.com/courses/{course
 
 # TEST_CANVAS_* are only used by "canvas-test.py".  These values are
 # required for testing with the Canvas API.
+# *** IMPORTANT ***
+# To work with media embedded in Canvas resources, a Canvas API key
+# with higher access privileges is required.  That's because Canvas protects
+# embedded media URLs behind a UUID number, which must be passed back to a
+# the `lti_resource_links` function in the Canvas API to get the actual URL
+# associated with the UUID.  That function requires "requires the
+# `manage_lti_add` and `manage_assignments_add` permissions", which the
+# Maizey observer user does not have.  This function is not specific to
+# MiVideo media, it applies to media from all sources, including YouTube.
+# (See: https://canvas.instructure.com/doc/api/lti_resource_links.html)
 export TEST_CANVAS_API_URL='https://umich.instructure.com/'
 export TEST_CANVAS_API_KEY=''
 export TEST_CANVAS_COURSE_ID=''
