#12 - configurable Canvas and MiVideo hostnames
As suggested by @zqian, make the hostnames for Canvas and MiVideo configurable.  They will probably not change in the foreseeable future.  However, if they do change, it's good to be able to update this application's configuration to deal with it rather than editing hard-coded values.

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,12 @@ export MIVIDEO_API_AUTH_SECRET=''
 # Template variables required: "mediaId", "startSeconds"
 export MIVIDEO_SOURCE_URL_TEMPLATE='https://www.mivideo.it.umich.edu/media/t/{mediaId}?st={startSeconds}'
 
+# MIVIDEO_KAF_HOSTNAME optional for specifying the hostname of the MiVideo KAF,
+# which is used to identify URLs for media hosted in the MiVideo.  If not
+# given, defaults to:
+# "aakaf.mivideo.it.umich.edu"
+#export MIVIDEO_KAF_HOSTNAME='aakaf.mivideo.it.umich.edu'
+
 # MIVIDEO_LANGUAGE_CODES_CSV optional for specifying the language codes to
 # process.  If not given, defaults to:
 # "en-us,en,en-ca,en-gb,en-ie,en-au,en-nz,en-bz,en-jm,en-ph,en-tt,en-za,en-zw"
@@ -16,6 +22,12 @@ export MIVIDEO_LANGUAGE_CODES_CSV='en-us,en'
 # MIVIDEO_CHUNK_SECONDS optional for specifying the number of seconds in each
 # chunk of captions.  If not given, defaults to "120".
 export MIVIDEO_CHUNK_SECONDS='120'
+
+# CANVAS_UI_HOSTNAME optional for specifying the hostname of the Canvas UI,
+# which is used to identify URLs for Canvas LTI 1.1 resources.  If not given,
+# defaults to:
+# "umich.instructure.com"
+#export CANVAS_UI_HOSTNAME='umich.instructure.com'
 
 # CANVAS_COURSE_URL_TEMPLATE optional for creating course URLs. If given, the
 # URL will be stored in the "course_context" property of the Document metadata.
