#12 - add config for Kaltura API session token

--- a/.env.example
+++ b/.env.example
@@ -56,3 +56,8 @@ export CANVAS_COURSE_URL_TEMPLATE='https://umich.instructure.com/courses/{course
 export TEST_CANVAS_API_URL='https://umich.instructure.com/'
 export TEST_CANVAS_API_KEY=''
 export TEST_CANVAS_COURSE_ID=''
+
+# KALTURA_SESSION_TOKEN is used to authenticate with the Kaltura API.
+# This is only required if you are using the Kaltura API to manage media.
+# Rather than using an ID and secret, a session token is used.
+KALTURA_SESSION_TOKEN=''
